# WeTalk

./: .gitignore  README.md
client/: .client.qml.swp  CMakeLists.txt  client.cpp  client.h  client.pro  client.qml  main.cpp  toolchain.cmake
server/: .server.cpp.swp  log  server.cpp  server1.cpp
